# WizardExtract

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs_source/: azure_ocr.rst  conf.py  extract_text.rst  index.rst  intro.rst  modules.rst
test/test_text_extractor/: test_text_extractor.py
test/test_text_extractor/baselines/: text_extractor.json
test/test_text_extractor/files_test/: file1.csv  file1.docx  file1.html  file1.tif  file1.txt  file1.xls  file1.xlsx
wizardextract/: __init__.py  wizard_extract.py
wizardextract/utils/errors/: __init__.py  errors.py  errors_handle.py
wizardextract/wizard_extractors/: extraction_text.py
wizardextract/wizard_extractors/ocr_service/: azure_ocr.py
wizardextract/wizard_extractors/tool/: csv_reader.py  doc_reader.py  docx_reader.py  html_reader.py  image_format_reader.py  json_reader.py  pdf_reader.py  txt_reader.py  xlsx_xls_reader.py
wizardextract/wizard_extractors/utils/: selector.py
wizardextract/wizard_ner/: wizard_ner.py
